menengahkan judul tema kontak dan mengubah masing masing title

--- a/style.css
+++ b/style.css
@@ -1511,10 +1511,10 @@ h5 {
         left: 15.5rem;
     }
     #kontak {
-        left: 11.5rem;
+        left: 10rem;
     }
     .judultema {
-        left: -2.5rem;
+        left: .5rem;
     }
 }
 
