--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 /* Kunci utama: Atur body sebagai flex container utama */
 body {
-    background-color: var(--first);
+    background-color: white;
     font-family: 'Roboto';
     font-size: 1.3rem;
     height: 100%;
@@ -392,18 +392,37 @@ ul li:hover ul.dropdown {
 }
 
 .salam .kata-kata {
-    width: 40%;
-    font-size: 1.2rem;
+    width: 50%;
+    font-size: 1.4rem;
 }
-
+.salam .kata-kata h2 {
+    margin-bottom: -.8rem;
+}
 .salam .kata-kata h1 {
-    font-size: 3rem;
+    font-size: 3.7rem;
+    margin: .5rem 0;
+}
+.salam .gambar{
+    position: relative;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 .salam .gambar img {
-    width: 33rem;
-    height: 33rem;
+    width: 35rem;
+    height: 40rem;
     margin-bottom: 2rem;
+      display: block;
+
+}
+.gradient {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 20%; /* sesuaikan tinggi gradasi */
+  background: linear-gradient(to top, rgba(255,255,255,1),rgb(255, 255, 255), rgba(255,255,255,0));
+  pointer-events: none;
 }
 
 h1,
@@ -599,7 +618,6 @@ h5 {
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-    box-shadow: 0 0 10px 2px rgb(255, 255, 255);
 }
 
 
@@ -1035,6 +1053,27 @@ h5 {
 
 /* galeri pelwata end */
 
+/* galeri majelis  */
+.majelis-wrapper {
+    width: 100%;
+}
+.majelis-bingkai {
+    display: flex;
+    gap:4rem 4rem;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.majelis-foto img{
+    width: 27rem;
+    height: auto;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+/* galeri majelis  end*/
+
 /* footer */
 .footer {
     width: 100%;
@@ -1303,7 +1342,7 @@ h5 {
     }
     
     .salam .kata-kata {
-        width: 90%;
+        width: 100%;
         font-size: 1.3rem;
         margin-bottom: 1.3rem;
     }
@@ -1466,11 +1505,16 @@ h5 {
         font-size: 1.7rem;
     }
     .salam .kata-kata {
-        font-size: 1.6rem;
+        font-size: 2.1rem;
         margin: 2rem 0 0 0;
     }
+    .salam .kata-kata h2 {
+        font-size: 2.3rem;
+    }
     .salam .kata-kata h1 {
-        font-size: 3.8rem;
+        font-size: 4.3rem;
+        line-height: 4.5rem;
+        margin-bottom: 2rem;
     }
     .first-p {
         top: -75rem;
