--- a/style.css
+++ b/style.css
@@ -411,9 +411,7 @@ ul li:hover ul.dropdown {
 .salam .gambar img {
     width: 35rem;
     height: 40rem;
-    margin-bottom: 2rem;
       display: block;
-
 }
 .gradient {
   position: absolute;
@@ -1504,6 +1502,7 @@ h5 {
         .navbar-judul h1 {
         font-size: 1.7rem;
     }
+
     .salam .kata-kata {
         font-size: 2.1rem;
         margin: 2rem 0 0 0;
@@ -1516,6 +1515,10 @@ h5 {
         line-height: 4.5rem;
         margin-bottom: 2rem;
     }
+    .salam .gambar img {
+    width: 33rem;
+    height: 38rem;
+}
     .first-p {
         top: -75rem;
     }
