--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     top: 0;
     right: 0;
     align-items: center;
-    color: #706334;
+    color: #4A90E2;
     z-index: 999999;
     border-bottom: 1px solid #ffffff;
 }
@@ -104,7 +104,8 @@ ul li ul.dropdown {
     width: auto;
     padding: 6px 10px 10px 10px;
     border-radius: 10px;
-    background-color: rgb(186, 152, 88);
+    background-color: #b006b0; 
+
     position: absolute;
     z-index: 99999;
     display: none;
@@ -175,7 +176,7 @@ ul li:hover ul.dropdown {
 
 
 .navbar .navbar-extra a {
-    color: wheat;
+    color: rgb(255, 255, 255);
     margin: 0 0.5rem;
 }
 
@@ -1184,7 +1185,9 @@ h5 {
         position: absolute;
         top: 100%;
         right: -100%;
-        background-color: rgb(145, 131, 107);
+        /* background-color: #4A90E2; */
+        /* background-color: rgba(107, 175, 146); */
+        background-color: #800080; 
         width: 30rem;
         height: 100vh;
         transition: .3s;
