--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 
 :root {
-    --first: #FBFBFB;
+    --first: #b006b0;
     --second: #C5BAFF;
     --third: #C4D9FF;
     --fourth: #E8F9FF;
@@ -442,14 +442,15 @@ h5 {
 /* kontak */
 
 #contact  {
-    background-color: #e7e6e6;
+    background-color: #f8f8f8;
     display: flex;
     justify-content: center;
     height: auto;
     margin: 5rem 0 10rem;
     padding: 5rem 0;
-    color: #6e5223;
+    color: #4d4d4d;
     font-family: 'IBM Plex Serif';
+    color: #9901db;
 }
 
 #contact h1{
@@ -457,6 +458,7 @@ h5 {
     font-size: 3rem;
     text-decoration: underline;
     text-decoration-thickness: 4px;
+
 }
 
 form .mb-3 {
@@ -490,9 +492,9 @@ form .mb-3 {
     -o-border-radius: 7px;
 }
 
-#contact button{
+#contact .button{
     width: 6.5rem;
-    background-color: blueviolet;
+    background-color: #8a2be2;
     height: 2.9rem; 
     cursor: pointer;
     color: white;
@@ -504,11 +506,39 @@ form .mb-3 {
     -o-border-radius: .5rem;
 }
 
+
+.alert {
+    display: flex;
+    justify-content: space-between;
+    height:3rem;
+    background-color: #02f41a8a;
+    padding: .5rem;
+    margin: 1rem 0;
+    color: white;
+    font-weight: bold;
+}
+
+.alert button{
+    padding: 0;
+    background-color: transparent;
+    width: auto;
+    height: auto;
+}
+
+.d-none {
+    display: none;
+}
+
+.alert svg {
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+}
+
 .contact-section {
-    padding: 60px 20px;
     /* Padding atas-bawah dan samping */
     text-align: center;
-    background-color: #f8f8f8;
+    background-color: #e9e9e9;
     /* Warna background keseluruhan section */
 }
 
@@ -627,9 +657,9 @@ form .mb-3 {
     padding: 60px 20px;
     /* Padding atas-bawah dan samping */
     text-align: center;
-    background-color: #f8f8f8;
+    background-color: #efefef;
     /* Warna background keseluruhan section */
-    margin: 0 0 3rem;
+    margin: -.1rem 0 0;
 }
 
 .home-galeri {
@@ -786,10 +816,10 @@ form .mb-3 {
     width: 90%;
     margin: 0 auto 50px;
     height: auto;
-    border-top: 4px solid #706334;
-    border-right: .5px solid #706334;
-    border-bottom: .5px solid #706334;
-    border-left: 4px solid #706334;
+    border-top: 4px solid #666;
+    border-right: .5px solid #666;
+    border-bottom: .5px solid #666;
+    border-left: 4px solid #666;
     font-family: 'DMSerifDisplay';
 }
 
@@ -802,8 +832,11 @@ form .mb-3 {
     font-family: 'DMSerifText', serif;
     /*SesuaikandenganfontAnda*/
     font-size: 2.5rem;
-    color: #9b7532;
+    color: #555;
     display: inline-block;
+}
+.judultema::after{
+    background-color: #b006b0;
 }
 
 .map-container iframe {
@@ -836,15 +869,17 @@ form .mb-3 {
     margin-top: 1rem;
 }
 
-#facebook,
-#yt {
+#facebook {
     width: 2.76rem;
+}
+#yt {
+    width: 3.4rem;
 }
 
 .hubungi-kolom svg {
     width: 2.5rem;
     margin-right: 17px;
-    fill: #6e5223;
+    fill: #b006b0;
     transition: .3s;
     -webkit-transition: .3s;
     -moz-transition: .3s;
